# evav-bench

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: LIMITATIONS.md  REPRODUCIBILITY.md  STABILITY_CONTRACT.md
cards/: README.md
cards/data/: leaderboard.json
cards/examples/: claude-sonnet-4.html  deepseek-v3-chat.html  gemini-2.5-pro.html  gemma-3-27b-it.html  gpt-4o-2024-08-06.html  llama-3.3-70b-instruct.html  llama-4-maverick-instruct.html  qwen-2.5-72b-instruct.html  smoketest-deepseek-live.html
cards/renderer/: render.py
cards/templates/: benchmark_card.html  deployment_card.html
examples/: battery.healthcare.example.json  battery.lending.example.json  battery.smoketest_deepseek.json  battery.trading.example.json
oa_bench/: __init__.py  __main__.py  _logging.py  battery.py  card.py  cli.py  drift.py  report.py  runner.py  score.py  supabase_mode.py
oa_bench/domains/: __init__.py  _base.py  healthcare.py  lending.py  trading.py
oa_bench/models/: __init__.py  _base.py  _retry.py  anthropic.py  deepseek.py  google.py  openai.py  openrouter.py
oa_bench/modules/: __init__.py  adversarial.py  bias.py  hallucination.py  multi_turn.py  privacy.py  reasoning_trace.py  refusal.py  schema_fidelity.py  tool_safety.py
oa_bench/scoring/: __init__.py  masking.py  matched_pair.py  precursor.py
smoketest_results/: cell_A1-X-+A-P0-s42-t03.json  cell_A2-S-+A-P0-s42-t03.json  cell_A3-M-+A-P0-s42-t03.json  cell_A4-Q-+A-P0-s42-t03.json  cell_A5-X--A-P0-s42-t03.json  cell_A7-X-+A-PE-s42-t03.json  cell_B1-X-+A-P0-s42-t03.json
tests/: test_edge_cases.py  test_smoke.py
