[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evav"
version = "1.0.4"
description = "EVAV Operational Alignment Battery — open-source CLI for matched-pair AI deployment safety auditing"
authors = [{name = "OA / Anthony Cruz", email = "anthonyc1208@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "anthropic>=0.30.0",
    "openai>=1.40.0",
    "google-generativeai>=0.5.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
supabase = [
    "supabase>=2.0.0",
]
pdf = [
    "pypandoc>=1.13",
]

[project.scripts]
evav = "oa_bench.cli:main"
oa-bench = "oa_bench.cli:main"

[tool.setuptools.packages.find]
include = ["oa_bench*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires live API keys",
    "slow: runs > 10 seconds",
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
